// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> should render the navbar 1`] = `
<div
  class="nav-primary hidden-panel"
>
  <div
    class="nav-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-transparent"
      type="button"
    >
      <div>
        
        <i
          class="material-icons icon-more"
        >
          more_vert
        </i>
      </div>
    </button>
    <div
      class="hiddenLink"
      data-candu-id="navbar-dropdown"
      data-testid="candu-hidden-link"
    />
    <div
      data-candu-id="navbar-home-spacer"
    />
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/tickets"
      >
        <i
          class="material-icons mr-2 icon"
        >
          question_answer
        </i>
        Tickets
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/customers"
      >
        <i
          class="material-icons mr-2 icon"
        >
          people
        </i>
        Customers
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/stats"
      >
        <i
          class="material-icons mr-2 icon"
        >
          bar_chart
        </i>
        Statistics
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings"
      >
        <i
          class="material-icons mr-2 icon"
        >
          settings
        </i>
        Settings
      </a>
    </div>
  </div>
  <div
    class="navbar-content"
  />
  <div
    data-candu-id="navbar-menu-spacer"
  />
  <button
    class="dropdown-toggle dropdown-toggle-dropup"
  >
    <div>
      Alex Plugaru
    </div>
    <div
      class="component"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          AP
        </span>
      </div>
      <div
        class="badge"
        style="background-color: rgb(36, 214, 157);"
      />
    </div>
  </button>
</div>
`;

exports[`<Navbar /> should render the opened panel 1`] = `
<div
  class="nav-primary"
>
  <div
    class="nav-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-transparent"
      type="button"
    >
      <div>
        
        <i
          class="material-icons icon-more"
        >
          more_vert
        </i>
      </div>
    </button>
    <div
      class="hiddenLink"
      data-candu-id="navbar-dropdown"
      data-testid="candu-hidden-link"
    />
    <div
      data-candu-id="navbar-home-spacer"
    />
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/tickets"
      >
        <i
          class="material-icons mr-2 icon"
        >
          question_answer
        </i>
        Tickets
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/customers"
      >
        <i
          class="material-icons mr-2 icon"
        >
          people
        </i>
        Customers
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/stats"
      >
        <i
          class="material-icons mr-2 icon"
        >
          bar_chart
        </i>
        Statistics
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings"
      >
        <i
          class="material-icons mr-2 icon"
        >
          settings
        </i>
        Settings
      </a>
    </div>
  </div>
  <div
    class="navbar-content"
  />
  <div
    data-candu-id="navbar-menu-spacer"
  />
  <button
    class="dropdown-toggle dropdown-toggle-dropup"
  >
    <div>
      Alex Plugaru
    </div>
    <div
      class="component"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          AP
        </span>
      </div>
      <div
        class="badge"
        style="background-color: rgb(36, 214, 157);"
      />
    </div>
  </button>
</div>
`;

exports[`<Navbar /> should render the user as unavailable 1`] = `
<div
  class="nav-primary hidden-panel"
>
  <div
    class="nav-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-transparent"
      type="button"
    >
      <div>
        
        <i
          class="material-icons icon-more"
        >
          more_vert
        </i>
      </div>
    </button>
    <div
      class="hiddenLink"
      data-candu-id="navbar-dropdown"
      data-testid="candu-hidden-link"
    />
    <div
      data-candu-id="navbar-home-spacer"
    />
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/tickets"
      >
        <i
          class="material-icons mr-2 icon"
        >
          question_answer
        </i>
        Tickets
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/customers"
      >
        <i
          class="material-icons mr-2 icon"
        >
          people
        </i>
        Customers
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/stats"
      >
        <i
          class="material-icons mr-2 icon"
        >
          bar_chart
        </i>
        Statistics
      </a>
      <a
        class="dropdown-item dropdown-item menu-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings"
      >
        <i
          class="material-icons mr-2 icon"
        >
          settings
        </i>
        Settings
      </a>
    </div>
  </div>
  <div
    class="navbar-content"
  />
  <div
    data-candu-id="navbar-menu-spacer"
  />
  <button
    class="dropdown-toggle dropdown-toggle-dropup"
  >
    <div>
      Alex Plugaru
    </div>
    <div
      class="component"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          AP
        </span>
      </div>
      <div
        class="badge"
        style="background-color: rgb(255, 150, 0);"
      />
    </div>
  </button>
</div>
`;
